# lance-sample

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  run.bat  run.sh
docs/superpowers/plans/: 2026-07-22-lance-vs-parquet-benchmark.md
docs/superpowers/specs/: 2026-07-22-lance-vs-parquet-benchmark-design.md
ref/: GAIA_Data_Platform_Integration_Spec.md  PRD_GAIA_AI_Data_Platform.md
src/: __init__.py  __main__.py  benchmark.py  config.py  generate.py  metrics.py  report.py  storage.py
src/benchmarks/: access_patterns.py  training.py
src/models/: __init__.py  decision_xgb.py  volume_mlp.py
tests/: test_config.py  test_generate.py  test_metrics.py  test_report.py  test_storage.py
