[project]
name = "lance-parquet-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lance>=0.20",
    "pyarrow>=17.0",
    "xgboost>=2.1",
    "torch>=2.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "boto3>=1.35",
    "plotly>=5.22",
    "psutil>=5.9",
    "s3fs>=2024.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
